# HurrieUp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TRANSLATION_IMPLEMENTATION.md  TRANSLATION_QUICKSTART.md  build_installer.ps1  build_installer_quick.ps1  build_installer_release_quick.ps1  project_description_for_ai.md  update_version.ps1
HurrieUp/: CMakeLists.txt  HurrieUp.rc  resources.qrc
HurrieUp/resources/complete/: bundled_complete_sounds.json
HurrieUp/resources/ring/: bundled_rings.json
HurrieUp/resources/voice/: bundled_voices.json
HurrieUp/resources/voice/SUPERTONE/: LICENSE  list.txt
HurrieUp/src/: aboutdialog.cpp  aboutdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  soundinfodialog.cpp  soundinfodialog.h
HurrieUp/translations/: README.md  en_US.ts  ja_JP.ts  ko_KR.ts  release_translations.ps1  release_translations.sh  translations.qrc  update_translations.ps1  update_translations.sh
installer/: README.md  setup.iss
